Added middleware; Refined redux architecture

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Demo web app created with react and redux library/architecture."
+      content="Sample web app created with react and redux library/architecture."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
